fix image spacing bug

--- a/src/components/Workspace/Workspace.module.css
+++ b/src/components/Workspace/Workspace.module.css
@@ -1,8 +1,15 @@
 .imgList {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.imgContainer {
+.container {
+  position: relative;
+}
+
+.imgBox {
   position: absolute;
   display: flex;
   justify-content: center;
